--- a/SIENI/pom.xml
+++ b/SIENI/pom.xml
@@ -10,5 +10,7 @@
     <module>SIENI-ear</module>
     <module>SIENI-web</module>
     <module>SIENI-ejb</module>
+    <module>persistence</module>
+    <module>client</module>
   </modules>
 </project>
