mejora de diseño de pantallas y creacion de modelos de BD (5 entradas listas)

--- a/SIENI/pom.xml
+++ b/SIENI/pom.xml
@@ -12,5 +12,6 @@
     <module>SIENI-ejb</module>
     <module>persistence</module>
     <module>client</module>
+    <module>SIENI-model</module>
   </modules>
 </project>
