--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -22,6 +22,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>sv.com.mined.sieni</groupId>
+            <artifactId>SIENI-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
