--- a/SIENI/SIENI-ejb/pom.xml
+++ b/SIENI/SIENI-ejb/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>SIENI</artifactId>
-    <groupId>sv.com.mined.sieni</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>SIENI</artifactId>
+        <groupId>sv.com.mined.sieni</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>sv.com.mined.sieni</groupId>
     <artifactId>SIENI-ejb</artifactId>
@@ -25,6 +25,11 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>sv.com.mined.sieni</groupId>
+            <artifactId>SIENI-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
