--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/web.xml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,29 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <error-page>
+        <!-- Missing login -->
+        <error-code>401</error-code>
+        <location>/faces/login.xhtml</location>
+    </error-page>
+    <error-page>
+        <!-- Forbidden directory listing -->
+        <error-code>403</error-code>
+        <location>/faces/access-denied.xhtml</location>
+    </error-page>
+    <error-page>
+        <!-- Missing resource -->
+        <error-code>404</error-code>
+        <location>/faces/404.xhtml</location>
+    </error-page>
+    <error-page>
+        <!-- Uncaught exception -->
+        <error-code>500</error-code>
+        <location>/faces/error.xhtml</location>
+    </error-page>
+    <error-page>
+        <!-- Unsupported servlet method -->
+        <error-code>503</error-code>
+        <location>/faces/error.xhtml</location>
+    </error-page>
 </web-app>
