--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/web.xml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,18 @@
         <param-name>primefaces.THEME</param-name>
         <param-value>rio</param-value>
     </context-param>
-    <context-param>
+    <!--    <context-param>
         <param-name>primefaces.UPLOADER</param-name>
         <param-value>auto</param-value>
-    </context-param>
+    </context-param>-->
+    <filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
