Cambios generales, modificacion de gestion de archivos, destion de componentes, ejemplo de como hacer video clase interactiva.

--- a/SIENI/pom.xml
+++ b/SIENI/pom.xml
@@ -10,8 +10,8 @@
     <module>SIENI-ear</module>
     <module>SIENI-web</module>
     <module>SIENI-ejb</module>
-    <module>persistence</module>
     <module>client</module>
     <module>SIENI-model</module>
+    <module>Sieni-persistence</module>
   </modules>
 </project>
