--- a/SIENI/SIENI-ejb/pom.xml
+++ b/SIENI/SIENI-ejb/pom.xml
@@ -38,6 +38,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>sv.com.mined.sieni</groupId>
+            <artifactId>SIENI-persistence</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
