--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -59,11 +59,11 @@
             <version>2.0</version>
             <type>jar</type>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
             <version>6.1.0</version>
-        </dependency>
+        </dependency>-->
 
         <!--        <dependency>
             <groupId>commons-fileupload</groupId>
