--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>jasperreports</artifactId>
             <version>6.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1200-jdbc41</version>
+        </dependency>
 
         <!--        <dependency>
             <groupId>commons-fileupload</groupId>
