--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -31,7 +31,7 @@
             <artifactId>SIENI-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4-1201-jdbc41</version>
@@ -70,16 +70,16 @@
             <version>9.4-1200-jdbc41</version>
         </dependency>
 
-        <!--        <dependency>
+        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.1</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
+            <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-        </dependency>-->
+            <version>1.3.2</version>
+        </dependency>
         <dependency>
             <groupId>org.jasypt</groupId>
             <artifactId>jasypt</artifactId>
