--- a/SIENI/SIENI-web/src/main/webapp/WEB-INF/web.xml
+++ b/SIENI/SIENI-web/src/main/webapp/WEB-INF/web.xml
@@ -29,12 +29,27 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
-     
+    <!--
+    <servlet>
+        <servlet-name>Push Servlet</servlet-name>
+        <servlet-class>org.primefaces.push.PushServlet</servlet-class>
+        <async-supported>true</async-supported>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Push Servlet</servlet-name>
+        <url-pattern>/primepush/*</url-pattern>
+    </servlet-mapping> 
+    <servlet-mapping>
+        <servlet-name>Comet Servlet</servlet-name>
+        <url-pattern>/primefaces_comet/*</url-pattern>
+    </servlet-mapping>
+      -->  
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
