--- a/SIENI/pom.xml
+++ b/SIENI/pom.xml
@@ -14,4 +14,12 @@
     <module>SIENI-model</module>
     <module>Sieni-persistence</module>
   </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>rio</artifactId>
+            <version>2.0</version>
+            <type>war</type>
+        </dependency>
+    </dependencies>
 </project>
