--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -101,6 +101,20 @@
             <version>1.0.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-runtime</artifactId>
+            <version>2.3.0-RC6</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        
+        
     </dependencies>
 
     <build>
