--- a/SIENI/SIENI-web/src/main/resources/sieni.properties
+++ b/SIENI/SIENI-web/src/main/resources/sieni.properties
@@ -2,4 +2,6 @@ resources.multimedia.video=video
 resources.multimedia.imagen=imagen
 resources.multimedia.audio=audio
 resources.multimedia.base=multimedia
+resources.multimedia.foto=foto
+resources.multimedia.foto.default=user
 separador=/
