--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -114,6 +114,13 @@
             <version>1</version>
         </dependency>
         
+        <dependency>
+	<groupId>org.primefaces.extensions</groupId>
+	<artifactId>primefaces-extensions</artifactId>
+	<version>3.2.0</version>
+</dependency>
+
+        
         
     </dependencies>
 
