--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -45,18 +45,18 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>5.3</version>
+            <version>5.2</version>
         </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>rio</artifactId>
-            <version>3.0</version>
+            <version>2.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>rio-theme</artifactId>
-            <version>3.0</version>
+            <version>2.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -105,12 +105,18 @@
             <artifactId>jlatexmath</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
+
 
 
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
-            <version>2.4.0-RC7</version>
+            <version>2.3.0-RC6</version>
         </dependency>
         
         <dependency>
@@ -120,10 +126,10 @@
         </dependency>
         
         <dependency>
-	<groupId>org.primefaces.extensions</groupId>
-	<artifactId>primefaces-extensions</artifactId>
-	<version>3.2.0</version>
-</dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
         
         
