--- a/SIENI/SIENI-web/pom.xml
+++ b/SIENI/SIENI-web/pom.xml
@@ -37,6 +37,11 @@
             <version>9.4-1201-jdbc41</version>
         </dependency>-->
         <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
